--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -1,12 +1,12 @@
-
 # The Standard Model Is Not an Accident
-## Structural Reconstruction of the Standard Model (Determinant-Closed SO(10))
+
+## Structural Reconstruction of the Standard Model (Determinant-Closed $\mathrm{SO}(10)$)
 
 The Standard Model (SM) is an extraordinarily successful infrared theory and it is also structurally unforgiving. Its gauge group, chiral fermion content, hypercharge quantization, and anomaly cancellations admit many algebraically conceivable “nearby” alternatives. Historically, we have treated the observed structure as contingent: something that works, but could have been otherwise.
 
 This article presents the core reconstruction claim of the accompanying paper:
 
-Within a determinant-closed SO(10) unification carrier, and under a strict admissibility discipline, the infrared Standard Model gauge group and one-generation chiral fermion content are not chosen, they are inherited as the complete restriction of a single SO(10) spinor (16F), with embedding-fixed hypercharge and automatic anomaly cancellation.
+Within a determinant-closed $\mathrm{SO}(10)$ unification carrier, and under a strict admissibility discipline, the infrared Standard Model gauge group and one-generation chiral fermion content are not chosen, they are inherited as the complete restriction of a single $\mathrm{SO}(10)$ spinor ($16_F$), with embedding-fixed hypercharge and automatic anomaly cancellation.
 
 This is a reconstruction, not model-building. No symmetry-breaking history is assumed. No RG numerics. No Yukawas or masses. No speculative UV completion. Only representation theory plus admissibility.
 
@@ -16,12 +16,12 @@ This is a reconstruction, not model-building. No symmetry-breaking history is as
 
 The reconstruction target is the observed infrared record:
 
-* Gauge group: SU(3)c × SU(2)L × U(1)Y
-* One-generation chiral fermion content (LH Weyl), including a right-handed neutrino (nuR)
+* Gauge group: $\mathrm{SU}(3)_c \times \mathrm{SU}(2)_L \times \mathrm{U}(1)_Y$
+* One-generation chiral fermion content (LH Weyl), including a right-handed neutrino ($\nu_R$)
 * Hypercharge quantization and normalization (not treated as tunable)
-* Cancellation of all relevant 4D anomalies: local gauge, mixed gauge, mixed gauge–gravity, and the Witten SU(2)L global anomaly
+* Cancellation of all relevant 4D anomalies: local gauge, mixed gauge, mixed gauge–gravity, and the Witten $\mathrm{SU}(2)_L$ global anomaly
 
-The central claim is not “SO(10) can contain the Standard Model” that is textbook material.
+The central claim is not “$\mathrm{SO}(10)$ can contain the Standard Model” that is textbook material.
 
 The claim is:
 
@@ -35,9 +35,9 @@ Everything else fails.
 
 ### 1) Determinant-closed carrier (imported)
 
-The paper imports the carrier selection: SO(10) (or Spin(10)) as dominance-minimal within the declared admissibility and budget discipline.
+The paper imports the carrier selection: $\mathrm{SO}(10)$ (or $\mathrm{Spin}(10)$) as dominance-minimal within the declared admissibility and budget discipline.
 
-This choice is conservative, not ambitious. SO(10) is the minimal simple carrier capable of hosting a full chiral generation including nuR without requiring low-energy chiral add-ons. Nothing smaller works without patching.
+This choice is conservative, not ambitious. $\mathrm{SO}(10)$ is the minimal simple carrier capable of hosting a full chiral generation including $\nu_R$ without requiring low-energy chiral add-ons. Nothing smaller works without patching.
 
 ---
 
@@ -45,9 +45,9 @@ This choice is conservative, not ambitious. SO(10) is the minimal simple carrier
 
 Hypercharge is not allowed to float.
 
-The reconstruction treats U(1)Y normalization as inherited from embedding into a simple carrier. Arbitrary rescalings, ad hoc abelian mixing, and independent charge assignments are explicitly forbidden.
+The reconstruction treats $\mathrm{U}(1)_Y$ normalization as inherited from embedding into a simple carrier. Arbitrary rescalings, ad hoc abelian mixing, and independent charge assignments are explicitly forbidden.
 
-The conventional normalization equivalent to kY = 5/3 is fixed by the embedding.
+The conventional normalization equivalent to $k_Y = \tfrac{5}{3}$ is fixed by the embedding.
 
 This single restriction deletes a vast class of “almost-SM” counterexamples. Historically, the abelian sector is where pathological models hide. Here, it is locked.
 
@@ -57,49 +57,51 @@ This single restriction deletes a vast class of “almost-SM” counterexamples.
 
 For representation bookkeeping, the reconstruction uses the standard chain:
 
-SO(10) ⊃ SU(5) ⊃ SU(3)c × SU(2)L × U(1)Y
+$$
+\mathrm{SO}(10) \supset \mathrm{SU}(5) \supset \mathrm{SU}(3)_c \times \mathrm{SU}(2)_L \times \mathrm{U}(1)_Y
+$$
 
-or equivalently the Pati–Salam route. These are representation-theoretically equivalent for fixing Y and decomposing 16F.
+or equivalently the Pati–Salam route. These are representation-theoretically equivalent for fixing $Y$ and decomposing $16_F$.
 
-This chain is **not** asserted as a symmetry-breaking history. It is used only to identify the embedded U(1)Y generator and perform restriction.
+This chain is **not** asserted as a symmetry-breaking history. It is used only to identify the embedded $\mathrm{U}(1)_Y$ generator and perform restriction.
 
 ---
 
-## One generation from one irreducible: the 16F
+## One generation from one irreducible: the $16_F$
 
 The sharpest statement of the reconstruction is simple:
 
 **One generation comes from one irreducible.**
 
-* A full chiral generation is hosted by a single SO(10) spinor (16F).
-* The infrared fermion spectrum is the complete restriction of 16F.
+* A full chiral generation is hosted by a single $\mathrm{SO}(10)$ spinor ($16_F$).
+* The infrared fermion spectrum is the complete restriction of $16_F$.
 * No incomplete multiplets and no extra low-energy chiral exotics are permitted.
 
 The resulting one-generation spectrum (LH Weyl notation) is:
 
-* QL : (3,2) with hypercharge +1/6
-* uRᶜ : (3̄,1) with hypercharge −2/3
-* dRᶜ : (3̄,1) with hypercharge +1/3
-* LL : (1,2) with hypercharge −1/2
-* eRᶜ : (1,1) with hypercharge +1
-* nuR : (1,1) with hypercharge 0
+* $Q_L$ : $(3,2)$ with hypercharge $+\tfrac{1}{6}$
+* $u_R^{c}$ : $(\bar{3},1)$ with hypercharge $-\tfrac{2}{3}$
+* $d_R^{c}$ : $(\bar{3},1)$ with hypercharge $+\tfrac{1}{3}$
+* $L_L$ : $(1,2)$ with hypercharge $-\tfrac{1}{2}$
+* $e_R^{c}$ : $(1,1)$ with hypercharge $+1$
+* $\nu_R$ : $(1,1)$ with hypercharge $0$
 
 Two consequences follow immediately:
 
 1. **Chirality is inherited.** Vectorlike pairing at the SM scale requires adding conjugates, which admissibility forbids.
-2. **nuR is structural.** It appears because the representation forces it, not because neutrino phenomenology demands it.
+2. **$\nu_R$ is structural.** It appears because the representation forces it, not because neutrino phenomenology demands it.
 
 ---
 
 ## Anomaly cancellation: inherited, not engineered
 
-Anomaly cancellation follows automatically from the completeness of the 16F restriction with embedding-fixed hypercharge.
+Anomaly cancellation follows automatically from the completeness of the $16_F$ restriction with embedding-fixed hypercharge.
 
 Representative cancellations:
 
-* SU(3)²–U(1): 1/6 − 1/3 + 1/6 = 0
-* SU(2)²–U(1): 1/4 − 1/4 = 0
-* Witten SU(2)L: four LH doublets per generation → even → allowed
+* $\mathrm{SU}(3)^2!-!\mathrm{U}(1)$: $\tfrac{1}{6} - \tfrac{1}{3} + \tfrac{1}{6} = 0$
+* $\mathrm{SU}(2)^2!-!\mathrm{U}(1)$: $\tfrac{1}{4} - \tfrac{1}{4} = 0$
+* Witten $\mathrm{SU}(2)_L$: four LH doublets per generation $\rightarrow$ even $\rightarrow$ allowed
 
 No tuning. No fixes. No freedom.
 
