--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -99,8 +99,8 @@ Anomaly cancellation follows automatically from the completeness of the $16_F$ r
 
 Representative cancellations:
 
-* $\mathrm{SU}(3)^2!-!\mathrm{U}(1)$: $\tfrac{1}{6} - \tfrac{1}{3} + \tfrac{1}{6} = 0$
-* $\mathrm{SU}(2)^2!-!\mathrm{U}(1)$: $\tfrac{1}{4} - \tfrac{1}{4} = 0$
+* $\mathrm{SU}(3)^2-\mathrm{U}(1)$: $\tfrac{1}{6} - \tfrac{1}{3} + \tfrac{1}{6} = 0$
+* $\mathrm{SU}(2)^2-\mathrm{U}(1)$: $\tfrac{1}{4} - \tfrac{1}{4} = 0$
 * Witten $\mathrm{SU}(2)_L$: four LH doublets per generation $\rightarrow$ even $\rightarrow$ allowed
 
 No tuning. No fixes. No freedom.
