--- a/content/manual/problems/grand-unified-theory.mdx
+++ b/content/manual/problems/grand-unified-theory.mdx
@@ -18,9 +18,9 @@ This paper takes a different position:
 
 ---
 
-## The Core Claim (No Hedge)
+## The Core Claim 
 
-Within a determinant-closed admissibility framework, one that enforces anomaly closure, fermion completeness, neutrino rigidity, and explicit minimality after record-quotienting **the Standard Model record predicates force a unique traditional Grand Unified completion**.
+Within a determinant-closed admissibility framework, one that enforces anomaly closure, fermion completeness, neutrino rigidity, and explicit minimality after record-quotienting the Standard Model record predicates force a unique traditional Grand Unified completion.
 
 That completion is **SO(10)**.
 
@@ -35,7 +35,7 @@ Not because it is popular.
 ## What “Determinant-Closed” Actually Means
 
 This is not a new symmetry proposal.
-It is a **selection principle**.
+It is a selection principle.
 
 A candidate completion is treated as law-bearing only if it survives a fixed-point recursion:
 
@@ -61,7 +61,7 @@ Nothing is forgiven because it “might work.”
 
 ## Why SO(10) Survives and Everything Else Fails
 
-Once neutrino mass is treated as a **hard record predicate**, the space of admissible completions collapses violently.
+Once neutrino mass is treated as a hard record predicate, the space of admissible completions collapses violently.
 
 Here is what the framework forces:
 
@@ -94,13 +94,13 @@ What emerges looks familiar:
 * A minimal Higgs architecture suffices.
 * Coupling near-unification is explainable without repair structure.
 
-But the **status** of these facts is different.
+But the status of these facts is different.
 
 They are not motivations.
-They are **outputs**.
+They are outputs.
 
 The framework does not assume unification.
-It shows that **unification is the only law-bearing completion compatible with the record**.
+It shows that unification is the only law-bearing completion compatible with the record.
 
 ---
 
@@ -116,7 +116,7 @@ Nothing in this paper:
 * assumes string theory,
 * or assumes a unified group at the start.
 
-The conclusion is narrower — and stronger:
+The conclusion is narrower and stronger:
 
 > **Given what is already observed, the freedom to choose a GUT evaporates.**
 
@@ -137,5 +137,6 @@ Instead, the framework shows something sharper:
 > **Once the record is taken seriously, unification stops being optional.**
 
 SO(10) is not selected because it is elegant.
-It is selected because **nothing else survives closure.**
+It is selected because nothing else survives closure.
+
 
