--- a/content/manual/pages/what-is-the-everything-equation.mdx
+++ b/content/manual/pages/what-is-the-everything-equation.mdx
@@ -10,15 +10,7 @@ The result is a compact principle: a lawful structure is one that is invariant u
 
 ---
 
-# The Everything Equation (canonical form)
-
-## Canonical form (exact)
-
-$$
-\mathcal{L} = \Omega \Delta \partial(\mathcal{L})
-$$
-
-## LaTeX form (exact)
+# The Everything Equation 
 
 $$
 \mathcal{L} = \Omega \Delta \partial(\mathcal{L})
