--- a/content/manual/pages/what-is-the-everything-equation.mdx
+++ b/content/manual/pages/what-is-the-everything-equation.mdx
@@ -26,7 +26,7 @@ The equation is a fixed-point condition. A candidate law $\mathcal{L}$ is admiss
 4. Apply $\Omega(\Delta(\partial(\mathcal{L})))$
 5. Admissibility means you end where you started
 
-In other words: **admissible law = fixed point of $\Omega\Delta\partial$**.
+In other words: admissible law = fixed point of **$\Omega\Delta\partial$**.
 
 ---
 
