--- a/content/manual/pages/what-is-the-everything-equation.mdx
+++ b/content/manual/pages/what-is-the-everything-equation.mdx
@@ -166,7 +166,7 @@ Treat the Everything Equation as a structural test:
 3. Check whether $\mathcal{L}$ is a fixed point:
 
 $$
-\mathcal{L} \stackrel{?}{=} \Omega \Delta \partial(\mathcal{L})
+\mathcal{L} = \Omega \Delta \partial(\mathcal{L})
 $$
 
 4. Compare what survives the pipeline with what is empirically or mathematically forced.
@@ -175,11 +175,11 @@ If you want the integrated map of how this program is applied across problems an
 
 ---
 
-## What remains after closure — $K_\infty$ and the resonance skeleton (CRS*)
+## What remains after closure - $K_\infty$ and the resonance skeleton (CRS*)
 
 The Everything Equation identifies admissible laws as fixed points of the composite operator $\Omega\Delta\partial$. A natural next question is:
 
-> Once a system is $\partial$-normalized, $\Delta$-persistent, and $\Omega$-closed, what further structure is still detectable — and what is genuinely “left over” as invariant core?
+> Once a system is $\partial$-normalized, $\Delta$-persistent, and $\Omega$-closed, what further structure is still detectable and what is genuinely “left over” as invariant core?
 
 One answer is a refinement layer built around two objects:
 
@@ -361,7 +361,7 @@ Paper I shows: if a strict high-frequency margin holds uniformly above some dyad
 Paper II repeats the logic in the inviscid setting, but with persistence supplied not by viscosity, but by a defect measure in the local energy balance (Duchon–Robert). Under the analogous strict margin hypothesis at high frequencies (defect dominating transfer by a packetized margin, with frequency-growing contraction scales), inviscid closure forces instantaneous regularity. This explicitly stress-tests the framework in the regime where classical dissipative smoothing is absent and time-reversibility would otherwise dominate.
 
 **(3) Vanishing viscosity (continuity of closure).**
-Paper III isolates the precise point where a “viscous closure mechanism” can fail to transfer to the Euler limit. It proves that if closure continuity fails, it must occur through an explicit, finite list of channels—no hidden failure modes. In particular, failure can only arise from:
+Paper III isolates the precise point where a “viscous closure mechanism” can fail to transfer to the Euler limit. It proves that if closure continuity fails, it must occur through an explicit, finite list of channels no hidden failure modes. In particular, failure can only arise from:
 
 * carrier mismatch (packet scale not convergent),
 * transfer instability,
@@ -397,7 +397,7 @@ The PDE stress-test series operationalizes that criterion in the most adversaria
 * $\Delta$ corresponds to persistence selection (viscous dissipation, defect measures, shock entropy production as nonnegative persistence objects).
 * $\Omega$ corresponds to closure/completion (deterministic contraction to a closure-stable representative; elimination of “hidden modes” by explicit failure-channel classification).
 
-In short: the closure pipeline is not asserted; it is exercised against the full range of PDE pathologies—high-frequency surplus, inviscid anomalies, singular limits, shocks, and explicit obstructions—and what remains is a sharp, testable structural core.
+In short: the closure pipeline is not asserted; it is exercised against the full range of PDE pathologies high-frequency surplus, inviscid anomalies, singular limits, shocks, and explicit obstructions and what remains is a sharp, testable structural core.
 
 This is the strongest kind of “stress test” a lawhood criterion can face: either the mechanism survives the adversarial PDE regimes, or it fails in one of the explicit, named channels.
 
@@ -407,7 +407,7 @@ This is the strongest kind of “stress test” a lawhood criterion can face: ei
 
 A useful way to understand the Everything Equation is not to begin with the equation itself, but to observe *how it appears* when a problem is approached from the correct level of abstraction.
 
-Consider a well-studied domain—such as renormalization in quantum field theory, weak solutions of nonlinear PDEs, or consistency conditions in spacetime geometry. These domains are saturated with technical machinery, established formalisms, and decades of accumulated results. Ordinarily, engaging such a topic leads immediately to object-level work: calculations, classifications, or refinements within an accepted framework.
+Consider a well-studied domain such as renormalization in quantum field theory, weak solutions of nonlinear PDEs, or consistency conditions in spacetime geometry. These domains are saturated with technical machinery, established formalisms, and decades of accumulated results. Ordinarily, engaging such a topic leads immediately to object-level work: calculations, classifications, or refinements within an accepted framework.
 
 However, a different outcome occurs if the problem is approached one level higher.
 
@@ -423,7 +423,7 @@ The first move is to explicitly prohibit object-level substitution. One does not
 
 > What constraints must any candidate structure satisfy in order to qualify as a physically meaningful law in this domain?
 
-This immediately disqualifies most familiar answers. Gauge invariance, action principles, symmetry arguments, or regularization schemes are no longer sufficient—they presuppose admissibility rather than explain it.
+This immediately disqualifies most familiar answers. Gauge invariance, action principles, symmetry arguments, or regularization schemes are no longer sufficient they presuppose admissibility rather than explain it.
 
 ---
 
@@ -480,7 +480,7 @@ The structure is forced by the logic of admissibility itself.
 
 ### Generality Beyond the Example
 
-Although this process can be demonstrated using a specific domain—renormalization, PDE admissibility, measurement theory, gauge consistency—the result does not depend on the domain.
+Although this process can be demonstrated using a specific domain renormalization, PDE admissibility, measurement theory, gauge consistency the result does not depend on the domain.
 
 The same reasoning applies wherever one asks:
 
@@ -499,7 +499,7 @@ And that is precisely why the equation appears so quickly and so inevitably once
 
 ### Worked Toy Example: Entropy Admissibility in a Scalar Conservation Law
 
-This example is deliberately chosen as a transfer-learning seed: it is mathematically standard, minimal, and brutally diagnostic. It shows — in a setting with no exotic physics — that the closure pipeline is not optional. If you demand admissibility (not “a solution”), the Everything Equation becomes the natural normal form.
+This example is deliberately chosen as a transfer-learning seed: it is mathematically standard, minimal, and brutally diagnostic. It shows in a setting with no exotic physics that the closure pipeline is not optional. If you demand admissibility (not “a solution”), the Everything Equation becomes the natural normal form.
 
 Setup: a law-object with non-uniqueness
 
@@ -518,7 +518,7 @@ So the “raw PDE” is not law-bearing by itself. It admits multiple incompatib
 
 This is exactly the situation the Everything Equation is designed for: candidate descriptions exist, but are not yet admissible.
 
-Step 1 — Boundary normalization: $\partial$
+Step 1 - Boundary normalization: $\partial$
 
 Define $\partial$ as canonical restriction / normalization of representation.
 
@@ -544,7 +544,7 @@ Intuition: $\partial$ is the step that says: “first decide what counts as a le
 
 This is boundary normalization in the strict sense: we fix the admissible boundary and interface semantics (weak formulation) so that the problem is well-posed as a candidate law space.
 
-Step 2 — Persistence filtering: $\Delta$
+Step 2 - Persistence filtering: $\Delta$
 
 Define $\Delta$ as the persistence filter: the operation that removes non-stable structure under the domain’s stabilization criterion.
 
@@ -591,7 +591,7 @@ anomaly cancellation and unitarity preservation (in gauge sectors),
 
 record stability (in measurement).
 
-Step 3 — Closure completion: $\Omega$
+Step 3 - Closure completion: $\Omega$
 
 Define $\Omega$ as closure completion / reflective completion under admissible re-expression.
 
