--- a/content/manual/pages/what-is-the-everything-equation.mdx
+++ b/content/manual/pages/what-is-the-everything-equation.mdx
@@ -153,9 +153,9 @@ This path is best if you want to interpret the framework as a fixed-point admiss
 
 ## Limits of the Claims
 
-* We do **not** claim that a single short equation replaces the Standard Model, GR, or QFT. Existing theories remain the operational content; the framework is about admissibility and selection.
-* The framework does **not** claim that every open problem is solved “by definition.” Each resolution must be carried by explicit constructions, derivations, and (where applicable) falsifiers.
-* The framework does **not** claim that every domain necessarily admits the same instantiation of $\partial$, $\Delta$, and $\Omega$. The roles are fixed; the realizations must be specified and defended.
+* We do not claim that a single short equation replaces the Standard Model, GR, or QFT. Existing theories remain the operational content; the framework is about admissibility and selection.
+* The framework does not claim that every open problem is solved “by definition.” Each resolution must be carried by explicit constructions, derivations, and (where applicable) falsifiers.
+* The framework does not claim that every domain necessarily admits the same instantiation of $\partial$, $\Delta$, and $\Omega$. The roles are fixed; the realizations must be specified and defended.
 
 ## Evaluation Procedure
 
