--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -29,7 +29,7 @@ Beyond the core closure rule, the Engine introduces:
 
 ### Part II — Map (closure-complete structural atlas)
 
-The Map applies a Tier–0 closure protocol to build a **closure-complete structural map of reality**: a registry of canonical fields, interaction graphs, monotonicity and conservation budgets, and a unified carrier in which GR and QM appear as complementary projections rather than contradictory foundations.
+The Map applies a Tier–0 closure protocol to build a closure-complete structural map of reality: a registry of canonical fields, interaction graphs, monotonicity and conservation budgets, and a unified carrier in which GR and QM appear as complementary projections rather than contradictory foundations.
 
 The Map is not “a model.” It is a constraint atlas: what is admitted, what is excluded, and what remains underdetermined is made explicit and localized into named tie-break nodes.
 
@@ -127,6 +127,7 @@ An AI (or any formal reader) can treat it as a protocol:
 That is the intended “engine + map” structure.
 
 ---
+
 
 
 
